--- a/Your_Travel_Guide/Your_Travel_Guide/New Group/Base.lproj/Main.storyboard
+++ b/Your_Travel_Guide/Your_Travel_Guide/New Group/Base.lproj/Main.storyboard
@@ -94,10 +94,10 @@
             </objects>
             <point key="canvasLocation" x="871.01449275362324" y="137.94642857142856"/>
         </scene>
-        <!--View Controller-->
+        <!--View Controller Category-->
         <scene sceneID="b4T-dN-1zW">
             <objects>
-                <viewController id="DkW-K0-xML" sceneMemberID="viewController">
+                <viewController id="DkW-K0-xML" customClass="ViewController_Category" customModule="Your_Travel_Guide" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2Y1-Uh-7MI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -111,6 +111,7 @@
                                     <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
+                                    <action selector="categorySelected:" destination="DkW-K0-xML" eventType="touchUpInside" id="ptK-tC-vuT"/>
                                     <segue destination="qt4-95-49Q" kind="show" id="943-Oo-cX1"/>
                                 </connections>
                             </button>
@@ -123,6 +124,7 @@
                                     <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
+                                    <action selector="categorySelected:" destination="DkW-K0-xML" eventType="touchUpInside" id="MVv-Pv-Yv9"/>
                                     <segue destination="YvX-k1-6rb" kind="show" id="QsE-oQ-13m"/>
                                 </connections>
                             </button>
@@ -135,6 +137,7 @@
                                     <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
+                                    <action selector="categorySelected:" destination="DkW-K0-xML" eventType="touchUpInside" id="69h-GQ-Bh5"/>
                                     <segue destination="qt4-95-49Q" kind="show" id="X21-9a-fZ2"/>
                                 </connections>
                             </button>
@@ -154,6 +157,7 @@
                                     <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
+                                    <action selector="categorySelected:" destination="DkW-K0-xML" eventType="touchUpInside" id="qJk-nH-g21"/>
                                     <segue destination="qt4-95-49Q" kind="show" id="A1p-hi-4e3"/>
                                 </connections>
                             </button>
@@ -162,15 +166,21 @@
                         <viewLayoutGuide key="safeArea" id="5b2-xZ-c79"/>
                     </view>
                     <navigationItem key="navigationItem" id="dmx-NZ-8y0"/>
+                    <connections>
+                        <outlet property="foodBtn" destination="532-rh-cZm" id="1l2-yt-LDb"/>
+                        <outlet property="introBtn" destination="75Y-So-JV7" id="Ge5-YL-Dqh"/>
+                        <outlet property="numberBtn" destination="3rJ-Im-LjB" id="cjN-Sn-jlf"/>
+                        <outlet property="shoppingBtn" destination="TsV-Xq-rUB" id="Vdu-Wh-R5L"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2fu-Hi-Bkw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2644.9275362318845" y="137.94642857142856"/>
         </scene>
-        <!--View Controller-->
+        <!--View Controller Content-->
         <scene sceneID="cmA-AQ-elF">
             <objects>
-                <viewController id="qt4-95-49Q" sceneMemberID="viewController">
+                <viewController id="qt4-95-49Q" customClass="ViewController_Content" customModule="Your_Travel_Guide" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="G1q-pA-USU">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -183,6 +193,9 @@
                                 <state key="normal" title="Button">
                                     <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="btn1Clicked:" destination="qt4-95-49Q" eventType="touchUpInside" id="GIZ-q3-y5O"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dag-1c-wHk">
                                 <rect key="frame" x="0.0" y="523" width="414" height="111"/>
@@ -192,14 +205,10 @@
                                 <state key="normal" title="Button">
                                     <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="btn3Clicked:" destination="qt4-95-49Q" eventType="touchUpInside" id="IBw-ry-Mle"/>
+                                </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7oe-SQ-HWA">
-                                <rect key="frame" x="186" y="174" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u3w-eT-ACL">
                                 <rect key="frame" x="0.0" y="393" width="414" height="111"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -208,6 +217,9 @@
                                 <state key="normal" title="Button">
                                     <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="btn2Clicked:" destination="qt4-95-49Q" eventType="touchUpInside" id="6fF-KW-r7U"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w28-mr-Hxb">
                                 <rect key="frame" x="0.0" y="658" width="414" height="111"/>
@@ -217,11 +229,28 @@
                                 <state key="normal" title="Button">
                                     <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="btn4Clicked:" destination="qt4-95-49Q" eventType="touchUpInside" id="dFo-cr-7kU"/>
+                                </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7oe-SQ-HWA">
+                                <rect key="frame" x="48" y="139" width="318" height="50"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="33"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.46202266219999999" green="0.83828371759999998" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="3eP-8t-dKb"/>
                     </view>
+                    <connections>
+                        <outlet property="label" destination="7oe-SQ-HWA" id="Scy-J4-rDo"/>
+                        <outlet property="topicBtn1" destination="Kpv-fh-33J" id="2eZ-7o-7k5"/>
+                        <outlet property="topicBtn2" destination="u3w-eT-ACL" id="bCg-Hj-xgD"/>
+                        <outlet property="topicBtn3" destination="dag-1c-wHk" id="hbE-3m-h8L"/>
+                        <outlet property="topicBtn4" destination="w28-mr-Hxb" id="uXa-w2-Vp9"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ruv-sm-fa0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
